--- a/01_azure-pipelines-ci.yml
+++ b/01_azure-pipelines-ci.yml
@@ -11,36 +11,36 @@ steps:
 - task: UseDotNet@2
   displayName: Install .NET 6 sdk
   inputs:
-    packageType: sdk
-    version: 6.0.x
-    installationPath: $(Agent.ToolsDirectory)/dotnet
+    packageType: 'sdk'
+    version: '6.0.x'
 
 - task: DotNetCoreCLI@2
   displayName: Restore Nuget Packages
   inputs:
-    command: restore
+    command: 'restore'
     projects: '**/WebApp.csproj'
+    feedsToUse: 'select'
 
 - task: DotNetCoreCLI@2
   displayName: Build Web App
   inputs:
+    command: 'build'
     projects: '**/WebApp.csproj'
     arguments: '--configuration $(BuildConfiguration)'
 
 - task: DotNetCoreCLI@2
   displayName: Run Unit Tests
   inputs:
-    command: test
+    command: 'test'
     projects: '**/*UnitTest*.csproj'
     arguments: '--configuration $(BuildConfiguration)'
 
 - task: DotNetCoreCLI@2
   displayName: Create Web App Package (.zip)
   inputs:
-    command: publish
-    publishWebProjects: True
+    command: 'publish'
+    publishWebProjects: true
     arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
-    zipAfterPublish: True
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact (WebApp.zip)'
